Agregada generacion de tokens JWT

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Token": "https://github.com/Saleck3/PW3_G6_OIDC aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
