--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "721808748185-99906ias8p0mbn0j3k01vunvihnoffl1.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
